--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tirupathi Store | Access</title>
+    <title>SBK SAVINGS</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <style>
         /* --- RESET & GLOBAL --- */
@@ -299,4 +299,5 @@
         });
     </script>
 </body>
+
 </html>
