--- a/admin.html
+++ b/admin.html
@@ -280,7 +280,7 @@
     </div>
 
     <div class="top-bar">
-        <h3>Admin Panel</h3>
+        <h3>SBK ADMIN</h3>
         <div class="menu-toggle" onclick="toggleSidebar()"><i class="fas fa-bars"></i></div>
     </div>
 
@@ -288,7 +288,7 @@
 
     <nav class="sidebar" id="sidebar">
         <div class="logo-section">
-            <h2>Tirupathi Store</h2>
+            <h2>SBK SAVINGS</h2>
         </div>
         <ul class="nav-links">
             <li class="nav-item active" onclick="switchView('dashboard', this)">
@@ -1019,4 +1019,5 @@
         });
     </script>
 </body>
+
 </html>
